--- a/src/components/todoList/todoList.scss
+++ b/src/components/todoList/todoList.scss
@@ -21,13 +21,13 @@
 
 .todo-add-inputs {
     display: flex;
-    flex: 1;
     flex-direction: column;
     gap: 8px;
+    max-width: 656px;
+    width: 100%;
 }
 
 .todo-add-inputs .todo-input {
-    width: 100%;
     padding: 10px;
     border: 1px solid var(--lt-gray-color);;
     border-radius: 4px;
@@ -36,6 +36,8 @@
 
 .todo-input {
     width: 100%;
+    min-width: 200px;
+    min-height: 40px;
 }
 
 .edit-text-remark {
@@ -48,7 +50,7 @@
 }
 
 .todo-textarea {
-    resize: none;
+    max-width: inherit;
 }
 
 .add-btn, 
@@ -62,6 +64,7 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    flex-shrink: 0;
 }
 
 .add-btn {
@@ -187,7 +190,7 @@
     }
 
     .add-btn {
-        padding: 4px 8px;
+        padding: 8px;
         font-size: 12px;
     }
 
