--- a/src/style.scss
+++ b/src/style.scss
@@ -15,10 +15,9 @@
 }
 
 body {
-    font-family: monospace;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
     margin: 0;
     padding: clamp(12px, 4vw, 48px);
-    min-height: 100vh;
     color: var(--dark-color);
     transition: 0.3s ease;
 }
@@ -96,7 +95,6 @@ img {
 }
 
 button {
-    font-family: monospace;
     display: block;
     line-height: 1;
     user-select: none;
@@ -106,6 +104,8 @@ button {
     }
 }
 
-input {
-    font-family: monospace;
+input,
+textarea,
+button  {
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
