--- a/src/components/todoList/todoList.scss
+++ b/src/components/todoList/todoList.scss
@@ -19,56 +19,13 @@
     margin-bottom: 20px;
 }
 
-.todo-add-inputs {
+.select-block {
+    align-self: flex-end;
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    max-width: 656px;
-    width: 100%;
-}
-
-.todo-add-inputs .todo-input {
-    padding: 10px;
-    border: 1px solid var(--lt-gray-color);;
-    border-radius: 4px;
-    font-size: 16px;
-}
-
-.todo-input {
-    width: 100%;
-    min-width: 200px;
-    min-height: 40px;
-}
-
-.edit-text-remark {
-    flex-shrink: 0;
-}
-
-.todo-textarea,
-.todo-item-text {
-    white-space: pre-wrap; 
-}
-
-.todo-textarea {
-    max-width: inherit;
-}
-
-.add-btn, 
-.save-btn,
-.cancel-btn,
-.check-all {
-    padding: 10px 20px;
-    background-color: var(--blue-color);
-    color: var(--white-color);
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    flex-shrink: 0;
-}
-
-.add-btn {
-    padding: 16px;
+    align-items: end;
+    gap: 4px;
+    margin-bottom: 16px;
 }
 
 .todo-list {
@@ -93,70 +50,6 @@
     margin-bottom: 0;
 }
 
-.delete-btn {
-    background-color: var(--dark-color);
-    color: var(--white-color);
-    border: none;
-    border-radius: 4px;
-    padding: 5px 10px;
-    cursor: pointer;
-    font-size: 14px;
-}
-
-.select-btn {
-    align-self: flex-end;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 4px;
-    margin-bottom: 16px;
-}
-
-.check-all {
-    padding: 4px 8px;
-    font-size: 12px;
-}
-
-.done-item {
-    cursor: pointer;
-    height: 12px;
-    width: 12px;
-}
-
-.check-bg {
-    background-color: #ebf1f8;
-    border-color: var(--blue-color);
-}
-
-.edit-btn {
-    background: none;
-    border: none;
-    width: 16px;
-    height: 16px;
-    padding: 0;
-    cursor: pointer;
-    transition: transform 0.5s ease-in-out;
-}
-
-.edit-btn::before {
-    content: "";
-    background: url("../../../static/images/icon1.svg") no-repeat center/contain;
-    display: block;
-    width: inherit;
-    height: inherit;
-}
-
-.edit-btn:hover {
-    transform: scale(1.1);
-    box-shadow: none;
-}
-
-.save-btn,
-.cancel-btn {
-    padding: 8px;
-    font-size: 12px;
-    width: 40px;
-}
 
 .todo-item-controls-wrap {
     display: flex;
@@ -170,7 +63,16 @@
 
 .todo-item-controls{
     display: flex;
+    align-items: center;
     gap: 8px;
+}
+
+.todo-add-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    max-width: 688px;
+    width: 100%;
 }
 
 .edit-controls {
@@ -204,26 +106,14 @@
 }
 
 @media(max-width: 767px) {
-    .todo-block {
-        padding: 8px;
-    }
-
-    .add-btn {
-        padding: 8px;
-        font-size: 12px;
-    }
-
-    .todo-item-text {
-        padding: 8px;
-        font-size: 16px;
-    }
-
+    
+    .todo-add-block,
     .todo-item {
-        padding: 8px;
+        flex-direction: column;
     }
 
-    .save-btn, .cancel-btn {
-        width: 25px;
+    .todo-add-block button,
+    .todo-item-controls-wrap {
+        width: 100%;
     }
-
-  }
+}
