--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,12 @@
 .upload-btn {
   margin: 0 auto;
 }
+
+@media (max-width: 767px) {
+  .sw-list-item {
+    width: 100%;
+  }
+}
 /*!*********************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/style.scss ***!
   \*********************************************************************************************************/
